--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="btnfactorial">!</string>
     <string name="btnpi">pi</string>
     <string name="btne">e</string>
+    <string name="tamanioLetraXlarge">40dp</string>
 
 </resources>
