establecer error al presionar el boton igual , si no hay valores en la pantalla

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="btne">e</string>
     <string name="tamanioLetraXlarge">40dp</string>
 
+
+
+    <string name="errorStringVacio">debe ingresar al menor un valor!</string>
+
 </resources>
