cambio de colores quemados a colores parametrizados en todos los layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Demo1</string>
+    <string name="app_name">Calculadora</string>
     <string name="btn0">0</string>
 
     <string name="btn1">1</string>
